# weave

./: .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  oxlintrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  tsconfig.node.json  vite.config.js  vitest.workspace.json
.github/workflows/: deploy.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.vue  env.d.ts  main.ts  style.css.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: file.rs  lib.rs  mac_window.rs  main.rs
apps/desktop/src/api/: file.ts
apps/desktop/src/components/: WindowTitleBar.css.ts  WindowTitleBar.vue
apps/desktop/src/components/WindowControls/: Windows.vue  useWindowControls.ts  windows.css.ts
apps/desktop/src/shared/: utils.ts
crates/core/: Cargo.toml
crates/core/src/: fs.rs
