[package]
name = "weave_core"
version = "0.0.0"
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
oxc_resolver = "2.0"
fs4 = { version = "0.12", features = ["sync"] }
fs_extra = "1.3"
notify = { version = "7", features = ["serde"] }
notify-debouncer-full = "0.4"
