[package]
name = "weave_app"
version = "0.0.0"
edition = { workspace = true }

[lib]
name = "weave_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-fs = "2"
thiserror = "1.0"
anyhow = "1.0"
http = "1.1"
tauri-plugin-log = "2"
log = { workspace = true }
weave_core = { workspace = true }
urlencoding = "2.1"
tauri-plugin-os = "2"
rand = "0.8.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
